--- a/package.json
+++ b/package.json
@@ -6,5 +6,12 @@
   "repository": "https://github.com/growyourlist/gyl-rss-broadcaster",
   "author": "https://github.com/gyl-dev",
   "license": "MIT",
-  "private": false
+  "private": false,
+  "dependencies": {
+    "aws-sdk": "^2.513.0",
+    "dotenv": "^8.1.0",
+    "dynopromise-client": "^0.2.0",
+    "moment-timezone": "^0.5.26",
+    "rss-parser": "^3.7.2"
+  }
 }
